--- a/BrainTeaser/Base.lproj/Main.storyboard
+++ b/BrainTeaser/Base.lproj/Main.storyboard
@@ -17,14 +17,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="brain" translatesAutoresizingMaskIntoConstraints="NO" id="5IR-0U-QmC">
-                                <rect key="frame" x="204.5" y="26" width="191" height="191"/>
+                                <rect key="frame" x="204.5" y="45" width="191" height="191"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="191" id="4rF-wy-Gdj"/>
                                     <constraint firstAttribute="width" constant="191" id="E7A-VX-s2F"/>
                                 </constraints>
                             </imageView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HkG-kO-5EH" customClass="CustomTextField" customModule="BrainTeaser" customModuleProvider="target">
-                                <rect key="frame" x="169.5" y="252" width="261" height="40"/>
+                                <rect key="frame" x="169.5" y="271" width="261" height="40"/>
                                 <color key="backgroundColor" red="0.90196078431372551" green="0.90196078431372551" blue="0.90196078431372551" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="261" id="3K6-7v-vld"/>
@@ -39,7 +39,7 @@
                                 </userDefinedRuntimeAttributes>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r0O-gR-xb5" customClass="CustomButton" customModule="BrainTeaser" customModuleProvider="target">
-                                <rect key="frame" x="226" y="392" width="147" height="42"/>
+                                <rect key="frame" x="226" y="411" width="147" height="42"/>
                                 <color key="backgroundColor" red="0.066666666666666666" green="0.5725490196078431" blue="0.83137254901960778" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="42" id="2Zk-bO-hCZ"/>
@@ -50,7 +50,7 @@
                                 </state>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uMA-Dt-pmP" customClass="CustomTextField" customModule="BrainTeaser" customModuleProvider="target">
-                                <rect key="frame" x="169" y="317" width="261" height="40"/>
+                                <rect key="frame" x="169" y="336" width="261" height="40"/>
                                 <color key="backgroundColor" red="0.87450980392156863" green="0.8784313725490196" blue="0.87450980392156863" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="STY-a1-EGC"/>
@@ -68,7 +68,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="uMA-Dt-pmP" firstAttribute="top" secondItem="HkG-kO-5EH" secondAttribute="bottom" constant="25" id="3w9-xv-nN6"/>
-                            <constraint firstItem="5IR-0U-QmC" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="6" id="B74-n7-O9J"/>
+                            <constraint firstItem="5IR-0U-QmC" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="25" id="B74-n7-O9J"/>
                             <constraint firstItem="HkG-kO-5EH" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="GlO-ZZ-Bkc"/>
                             <constraint firstItem="HkG-kO-5EH" firstAttribute="top" secondItem="5IR-0U-QmC" secondAttribute="bottom" constant="35" id="Lw8-Ga-Sz4"/>
                             <constraint firstItem="r0O-gR-xb5" firstAttribute="top" secondItem="uMA-Dt-pmP" secondAttribute="bottom" constant="35" id="Qpn-ub-ca8"/>
@@ -77,6 +77,11 @@
                             <constraint firstItem="r0O-gR-xb5" firstAttribute="centerX" secondItem="uMA-Dt-pmP" secondAttribute="centerX" id="q4Y-Sw-owJ"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="emailConstraint" destination="GlO-ZZ-Bkc" id="v5L-9H-lto"/>
+                        <outlet property="loginConstraint" destination="q4Y-Sw-owJ" id="kRb-Wx-gG1"/>
+                        <outlet property="passwordConstraint" destination="ooU-0z-35y" id="hrL-Ad-gaw"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
